devternity video autoplay on mobile

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -156,7 +156,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
 
     <!-- Banner -->
       section#banner
-        video#video(autoplay="" loop="" muted="")
+        video#video(autoplay loop playsinline muted)
           source(src="images/video.mp4" type="video/mp4")
 
         a#trust(href="https://itconference.top")
