slightly update json/ld

--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -63,7 +63,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
       | {
       |   "@context": "http://schema.org",
       |   "@type": "EducationEvent",
-      |   "name": "#{data.theme}",
+      |   "name": "#{data.theme} Conference",
       |   "image": "http://devternity.com/images/logo_2017_filled.png",
       |   "description": "The premium-quality annual international software development conference in #{data.city}, #{data.country}",
       |   "startDate": "#{data.date_iso}T09:00",
