--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -18,6 +18,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
     meta(property="og:image" content="https://devternity.com/images/logo_2017_filled.png")
     meta(property="og:image:width" content="512")
     meta(property="og:image:height" content="512")
+    meta(property="og:video" content="https://www.youtube.com/v/oXTY7GYhlFU")
     meta(name="p:domain_verify" content="f56aab43251f5fa394e371ae54ec3d06")
     link(rel="shortcut icon" type="image/png" href="images/logo_2017_filled.png")
     link(rel="icon" href="/images/favicon.png")
