--- a/event-template/why.pug
+++ b/event-template/why.pug
@@ -139,11 +139,6 @@ html(lang="en")
               p.title Get salary raise
               p We talk to our permanent attendees and many report increase in salary. Depending on the market, architects earn 25-70% than developers. Want to turn your 3K into 5K? Jump on the bus and learn things that matter.
             .tile.is-child
-              p.title Raise money
-              p We give an excellent opportunity to generate passive income to our loyal attendees. The rules are simple – you help friends and colleagues discover DevTernity. We pay you cash. Learn more about the program 
-                a(href="/fellows.html" target="_blank") here
-                | .
-            .tile.is-child
               p.title Enjoy perfect coffee by 
                 img.is-inline.image.is-64x64.is-rounded(src="/images/illy.png")
               p What's the best coffee on the planet? It's Illy. Illy coffees are blended from arabica beans from multiple sources. The grounds are packaged in steel canisters and pressurized with an inert gas rather than air. DevTernity runs on Illy. And, like all best things in life, it's free.
@@ -209,17 +204,7 @@ html(lang="en")
                   |  travel@devternity.com
           .tile.is-vertical.is-parent
             .tile.is-child
-              p.title Make yourself a Christmas present
-              p You worked 
-                em so hard 
-                | throughout the year. You want to celebrate your efforts, don't you? Make yourself the Christmas present you deserve – 
-                b a ticket to the key tech conference of the year. 
-                | Life is too short to not do what makes you happy.
-                br
-                br
-                img.image(src="/images/present.jpg")
-            .tile.is-child
-              p.title The venue that will make your heart dance
+              p.title Stunning venue
               p
                 | Bored of conferences that run in hotels, decorated with Soviet-style red carpets? Or spending the whole day in a dark cinema that make your eyes bleed? We feel your pain. Our venue, 
                 b the Castle of Light
