--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -213,13 +213,13 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
               i.fas.fa-star
               |&nbsp;
               i.fas.fa-star
-          br
-          br
+          //- br
+          //- br
         //- .fb-like(data-width="320px" data-href="https://www.facebook.com/devternity" data-layout="standard" data-action="like" data-show-faces="true" style="min-height: 100px")
-      section.wrapper.align-center(data-remodal-id="venue-location")
-          button.remodal-close(data-remodal-action="close")
-          div.embed-container
-            iframe(src='https://player.vimeo.com/video/265964598' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen)
+      //- section.wrapper.align-center(data-remodal-id="venue-location")
+      //-     button.remodal-close(data-remodal-action="close")
+      //-     div.embed-container
+      //-       iframe(src='https://player.vimeo.com/video/265964598' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen)
 
       section#speakers-container.wrapper.speakers.align-center
         div.container
@@ -515,16 +515,16 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
         br 
         | All rights reserved.
 
-    script(type="text/javascript")
-      | var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-      | (function(){
-      | var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-      | s1.async=true;
-      | s1.src='https://embed.tawk.to/58ca5310f42d220ab327a8d7/default';
-      | s1.charset='UTF-8';
-      | s1.setAttribute('crossorigin','*');
-      | s0.parentNode.insertBefore(s1,s0);
-      | })();
+    //- script(type="text/javascript")
+    //-   | var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    //-   | (function(){
+    //-   | var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    //-   | s1.async=true;
+    //-   | s1.src='https://embed.tawk.to/58ca5310f42d220ab327a8d7/default';
+    //-   | s1.charset='UTF-8';
+    //-   | s1.setAttribute('crossorigin','*');
+    //-   | s0.parentNode.insertBefore(s1,s0);
+    //-   | })();
 
     script(type="text/javascript")
       | (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter47893700 = new Ya.Metrika2({ id:47893700, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://mc.yandex.ru/metrika/tag.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks2");
