--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -167,7 +167,7 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
             h2 &nbsp;DevTernity
 
           p=data.desc
-          p #{data.date}. #{data.venue_name}.
+          p #{data.date}. #{data.city}. #{data.venue_name}.
           ul.actions
             if data.status == "on_sale"
               li
@@ -198,9 +198,9 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
               a(href="//itconference.top" target="_blank"): strong the top 3
               |  international software development conference in Europe. 
             h2
-            p Here you learn more than on other conferences. We focus on the core areas that are paramount to your success — software architecture, clean code and leadership. All noise is removed and can be learned elsewhere.
+            p We focus on the core skills paramount to your success – code design, software architecture and leadership.
             h2
-            p Riga, the capital of Latvia, is one of the top destinations in Europe. 
+            p Start preparing for the role of software architect, engineering leader or CTO today.
             h2
               p It's a must see.
             p(style="color: #ffdd57")
