--- a/event-template/index.pug
+++ b/event-template/index.pug
@@ -59,32 +59,39 @@ html(lang="en" ng-app="devternity" ng-controller="LandingPageController" class="
       |   ]
       | }      
 
-    script(type="application/ld+json")
-      | {
-      |   "@context": "http://schema.org",
-      |   "@type": "EducationEvent",
-      |   "name": "#{data.theme} Conference",
-      |   "image": "http://devternity.com/images/logo_2017_filled.png",
-      |   "description": "The premium-quality annual international software development conference in #{data.city}, #{data.country}",
-      |   "startDate": "#{data.date_iso}T09:00",
-      |   "endDate": "#{data.date_iso}T20:00",
-      |   "performer": {
-      |     "@type": "Organization",
-      |     "name": "DevTernity",
-      |     "sameAs": "https://devternity.com/"
-      |   },
-      |   "location": {
-      |     "@type": "Place",
-      |     "address": {
-      |       "@type": "PostalAddress",
-      |       "addressLocality": "#{data.city}",
-      |       "addressRegion": "#{data.country}",
-      |       "postalCode": "#{data.venue_postal_code}",      
-      |       "streetAddress": "#{data.venue_address}"
-      |     },
-      |     "name": "#{data.venue_name}"
-      |   }
-      | }      
+    script(type="application/ld+json").
+       {
+         "@context": "http://schema.org",
+         "@type": "EducationEvent",
+         "name": "#{data.theme} Conference",
+         "image": "http://devternity.com/images/logo_2017_filled.png",
+         "description": "The premium-quality annual international software development conference in #{data.city}, #{data.country}",
+         "startDate": "#{data.date_iso}T09:00",
+         "endDate": "#{data.date_iso}T20:00",
+         "offers": {
+          "@type": "Offer",
+          "availability": "http://schema.org/InStock",
+          "offerCount": "600",
+          "price": "299",
+          "priceCurrency": "EUR"
+         },
+         "performer": {
+           "@type": "Organization",
+           "name": "DevTernity",
+           "sameAs": "https://devternity.com/"
+         },
+         "location": {
+           "@type": "Place",
+           "address": {
+             "@type": "PostalAddress",
+             "addressLocality": "#{data.city}",
+             "addressRegion": "#{data.country}",
+             "postalCode": "#{data.venue_postal_code}",      
+             "streetAddress": "#{data.venue_address}"
+           },
+           "name": "#{data.venue_name}"
+         }
+       }      
     script
       | (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       | (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
